Re-introduce HAVE_MALLOC_H load guard for malloc.h

In order to prevent the attempted inclusion of `malloc.h` when we're
building with jemalloc preloaded

[Bug #20928]